--- a/jsssynax.html
+++ b/jsssynax.html
@@ -20,9 +20,11 @@
             sum=num1+num2;
             var prod=num1*num2;
             var dov=num2/num1;
+            var mod=num2%num1;
             document.write("the sum of"  +" " + num1  +" "+ "and" + " "+num2 +" " +"is equals to" + " "+ sum +"<br>")
             document.write("the product is"+ " " +prod+ "<br>")
             document.write("the division of" +" " +num2+" " +"and" +"" +num1+" " +dov +"<br>")
+            document.write("the remainder of division is" +" " +num2+" " +"and" +"" +num1+" " +"is" +" "+mod+"<br>")
             document.write(fname +"<br>")
             document.write(lname +"<br>")
             document.write("my name is"+ " "+fname + " " + lname +  " " + "and am" +  " " + age + " " + "years old")
