--- a/jsssynax.html
+++ b/jsssynax.html
@@ -21,6 +21,8 @@
             var prod=num1*num2;
             var dov=num2/num1;
             var mod=num2%num1;
+            var x=num2**2
+            document.write(x +"<br>")
             document.write("the sum of"  +" " + num1  +" "+ "and" + " "+num2 +" " +"is equals to" + " "+ sum +"<br>")
             document.write("the product is"+ " " +prod+ "<br>")
             document.write("the division of" +" " +num2+" " +"and" +"" +num1+" " +dov +"<br>")
