--- a/array.html
+++ b/array.html
@@ -10,7 +10,7 @@
 <body>
     <script type="text/Javascript">
         // creating an array of strings 
-        var students = ["Nancy", "Mildred", "Joseph", "Mercy", "Michelle"]; 
+        var students = ["kelvin", "Mildred", "Joseph", "Mercy", "Michelle"]; 
         document.write(students + "<br>"); 
         
         // Creating an array of number elements 
