--- a/functions.html
+++ b/functions.html
@@ -11,7 +11,7 @@
             document.write("Good morning " + name + "<br>");
         }
         // calling a function
-        greetings("Nancy");
+        greetings("kelvin");
 
         function sum(a, b) {
             var total = a + b
