--- a/poppups.html
+++ b/poppups.html
@@ -12,18 +12,18 @@
         function confirmPop(name) { 
             confirm("Are you sure you want to close? " + name); 
         } 
-        confirmPop("Nancy"); 
+        confirmPop("kelvin"); 
         
         function promptPop(name) { 
             prompt("Enter your name: " + name); 
         } 
-        promptPop("Nancy"); 
+        promptPop("kelvin"); 
         
         function alertPop(name) { 
             var name = "Nancy"; 
             alert("Hello World!" + name); 
         } 
-        alertPop("Nancy");
+        alertPop("kelvin");
     </script>
 </body>
 
